# email_summarizer

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  lambda_function.py  pyproject.toml  tox.ini
e2e/: test_invoke.sh
e2e/payload/: alt_haiku.json  alt_nova.json  noreply_haiku.json  noreply_nova.json  primary_haiku.json  primary_nova.json
scripts/: get_gmail_refresh.sh
src/email_summarizer/: app.py
src/email_summarizer/cli/: main.py
src/email_summarizer/controllers/: alphonse_controller.py
src/email_summarizer/models/: actionable_email.py  email.py  enums.py  high_priority.py  report.py  summary.py
src/email_summarizer/prompts/: next_steps.py  pii_redaction.py  summary_prompt.py
src/email_summarizer/services/: anthropic_client.py  base_model_client.py  bedrock_client.py  deepseek_client.py  discord_client.py  gmail.py  nova_client.py  refresh_token.py  sonnet_client.py
src/email_summarizer/utils/: ai_utils.py  email_address_utils.py  email_utils.py  general_utils.py  gmail_credentials.py  gmail_utils.py  grouping_utils.py  redaction_utils.py
src/email_summarizer/views/: email_report.mustache  email_report.py
tests/: base.py  test_utils.py
tests/controllers/: alphonse_controller_test.py
tests/services/: gmail_test.py  nova_client_test.py  redaction_utils_test.py  refresh_token_test.py
tests/utils/: ai_utils_test.py  email_utils_test.py  grouping_utils_test.py  redaction_utils_test.py
